<resources>
    <string name="app_name">Android_Assessment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_qpay_wallet">Qpay Wallet</string>
    <string name="str_2_36_000_47">₹ 2,36,000.47</string>
    <string name="str_image">image</string>
    <string name="str_sbi">SBI</string>
    <string name="str_exp_date">EXP DATE 09/30</string>
    <string name="str_security_code">Security Code 920</string>
    <string name="str_8174_5300_0364_1148">8174 5300 0364 1148</string>
    <string name="str_bob">BOB</string>
    <string name="str_bank">Bank</string>
    <string name="str_my_cards">My Cards</string>
    <string name="str_card_number">Card number</string>
    <string name="str_9876543210123453">9876543210123453</string>
    <string name="str_expiry">Expiry</string>
    <string name="str_exp_date_9_30">9/30</string>
    <string name="str_security_code_cvv">Security Code (CVV)</string>
    <string name="str_more">…</string>
    <string name="str_add_new_card">Add New Card</string>
    <string name="str_hello">Hello</string>
    <string name="str_thomas_shelby">Thomas Shelby…</string>
    <string name="str_account_balance">Account Balance</string>
    <string name="str_link_account">Link Account</string>
    <string name="str_new_account">New Account</string>
    <string name="str_account_number">Account Number</string>
    <string name="str_xxxxxxxxxxxxxxxx">XXXXXXXXXXXXXXXX</string>
    <string name="str_state_bank_of_india">State Bank of India</string>
    <string name="str_ifsc_code">IFSC Code</string>
    <string name="str_kkbk0008798">KKBK0008798</string>
    <string name="str_add_money">Add Money</string>
    <string name="str_transfer">Transfer</string>
    <string name="str_ticket_booking">Ticket Booking</string>
    <string name="str_flight">Flight</string>
    <string name="str_bus">Bus</string>
    <string name="str_train">Train</string>
    <string name="str_hotel">Hotel</string>
    <string name="str_receive_money">Receive Money</string>
    <string name="str_upi_id">UPI ID: 9876543210@qpay</string>
    <string name="str_qr_code">QR Code</string>
    <string name="str_copy">Copy</string>
    <string name="str_share">Share</string>
    <string name="str_bill_payments">Bill Payments</string>
    <string name="str_mobile_recharge">Mobile \nRecharge</string>
    <string name="str_electricity_payments">Electricity \nPayments</string>
    <string name="str_credit_card_bills">Credit Card Bills</string>
    <string name="str_dth_cable_tv">DTH/ \nCable TV</string>
    <string name="str_gas_cylinder">Gas \nCylinder</string>
    <string name="str_more_payments">More \nPayments</string>
    <string name="str_recent_transactions">Recent Transactions</string>
    <string name="str_thomas">Thomas Shelby</string>
    <string name="str_8778214386_qpay">8778214386@qpay</string>
    <string name="str_wallet_balance">Wallet Balance</string>
    <string name="str_receiving_money_in">Receiving money in</string>
    <string name="str_xxxx_3941">xxxx 3941</string>
    <string name="str_manage">Manage</string>
    <string name="str_bank_accounts">Bank Accounts</string>
    <string name="str_primary">Primary</string>
    <string name="str_check_balance">Check Balance</string>
    <string name="str_bank_of_baroda">Bank of Baroda</string>
    <string name="str_add_new_bank_account">Add New Bank Account</string>
    <string name="str_security_amp_protection"><![CDATA[Security & Protection]]></string>
    <string name="str_screen_lock">Screen lock</string>
    <string name="str_biometric_amp_screen_locks"><![CDATA[Biometric & Screen locks]]></string>
    <string name="str_change_password">Change Password</string>
    <string name="str_reset_your_app_password">Reset your app password</string>
    <string name="str_settings_amp_preferences"><![CDATA[Settings & Preferences]]></string>
    <string name="str_languages">Languages</string>
    <string name="str_choose_language_english">Choose Language: English</string>
    <string name="str_permissions">Permissions</string>
    <string name="str_manage_data_sharing_settings">Manage data sharing settings</string>
    <string name="str_help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="str_help">Help</string>
    <string name="str_report_fraud">Report Fraud</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_about_us">About Us</string>
    <string name="str_logout">Logout</string>
</resources>