<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/uiCvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:cardBackgroundColor="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/uiIvWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scaleType="fitCenter"
                android:visibility="visible"
                android:contentDescription="@string/str_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_qpay_wallet" />

            <TextView
                android:id="@+id/uiTvQpayWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="2dp"
                android:text="@string/str_qpay_wallet"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:minWidth="100dp"
                app:layout_constraintBottom_toTopOf="@id/uiTvWalletBalance"
                app:layout_constraintStart_toEndOf="@id/uiIvWallet"
                app:layout_constraintTop_toTopOf="@id/uiIvWallet"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/uiTvWalletBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingBottom="8dp"
                android:text="@string/str_2_36_000_47"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:minWidth="100dp"
                app:layout_constraintBottom_toBottomOf="@id/uiIvWallet"
                app:layout_constraintStart_toEndOf="@id/uiIvWallet"
                app:layout_constraintTop_toBottomOf="@id/uiTvQpayWallet"
                android:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>