<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AccountsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/uiCvCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uiIvCardBg"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_card_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uiIvSignal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_wifi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uiTvSbi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:drawableStart="@drawable/ic_sbi"
                    android:drawablePadding="4dp"
                    android:text="@string/str_sbi"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/uiIvSignal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/uiIvSignal" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uiIvChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/ic_chip"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uiTvExpiryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/str_exp_date"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/uiIvChip"
                    app:layout_constraintStart_toStartOf="@id/uiIvChip"
                    app:layout_constraintTop_toBottomOf="@id/uiIvChip" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uiTvSecurityCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/str_security_code"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/uiTvExpiryDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/uiTvExpiryDate" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uiTvCardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/str_8174_5300_0364_1148"
                    android:textColor="@color/black_90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/uiTvExpiryDate"
                    app:layout_constraintTop_toBottomOf="@id/uiTvExpiryDate" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uiIvVisa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_visa"
                    app:layout_constraintBottom_toBottomOf="@id/uiTvCardNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/uiTvCardNumber" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/uiCvCardTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uiCvCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uiIvCardBgTwo"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_card_bg"
                    android:tint="@color/black_90"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uiIvSignalTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_wifi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uiTvSbiTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:drawableStart="@drawable/ic_bob"
                    android:drawablePadding="4dp"
                    android:text="@string/str_bob"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/uiIvSignalTwo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/uiIvSignalTwo" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uiIvChipTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/ic_chip"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uiTvExpiryDateTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/str_exp_date"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/uiIvChipTwo"
                    app:layout_constraintStart_toStartOf="@id/uiIvChipTwo"
                    app:layout_constraintTop_toBottomOf="@id/uiIvChipTwo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uiTvSecurityCodeTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/str_security_code"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/uiTvExpiryDateTwo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/uiTvExpiryDateTwo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/uiTvCardNumberTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/str_8174_5300_0364_1148"
                    android:textColor="@color/black_90"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/uiTvExpiryDateTwo"
                    app:layout_constraintTop_toBottomOf="@id/uiTvExpiryDateTwo" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/uiIvVisaTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_visa"
                    app:layout_constraintBottom_toBottomOf="@id/uiTvCardNumberTwo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/uiTvCardNumberTwo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>